@@ -1,12 +1,33 @@
 #!/bin/sh
 
+# Parse arguments
+echo "Options:"
+while getopts "vi" opt; do
+  case $opt in
+    v)
+      echo "Verbose mode" >&2
+      VERBOSE=-v
+      ;;
+    i)
+      echo "Install on idefix repository" >&2
+	  UPDATEIDEFIX=-i 
+      ;;
+    \?)
+      echo "Invalid option: -$OPTARG" >&2
+	  echo "Usage: build_tar_and_install_vnx [-i] [-v]"
+	  echo "           -i copies the new version to idefix repository (only if executed from idefix)"
+	  echo "           -v verbose mode"
+      ;;
+  esac
+done
+
 # Move to the upper directory where this script is
 cdir=$( dirname $0 )
 cd $cdir/..
 
 echo `pwd`
 
-admin-scripts/build_vnx_tar
+admin-scripts/build_vnx_tar $VERBOSE $UPDATEIDEFIX 
 
 TARNAME=$( readlink distrib/vnx-latest.tgz )  # vnx-latest.tgz is a symbolic link
                                               # with stat we get the name of the 
@@ -14,12 +35,18 @@ TARNAME=$( readlink distrib/vnx-latest.tgz )  # vnx-latest.tgz is a symbolic lin
 
 DIRNAME=$( echo "$TARNAME" | sed s/.tgz$// )
 
-echo "TARNAME=$TARNAME"
-echo "DIRNAME=$DIRNAME"
+if [ $VERBOSE ]; then 
+    echo "TARNAME=$TARNAME"
+    echo "DIRNAME=$DIRNAME"
+fi
 
 mkdir -p tmp
 cd tmp
-tar xfvz ../distrib/$TARNAME
-$DIRNAME/install_vnx
+if [ $VERBOSE ]; then
+    tar xfvz ../distrib/$TARNAME
+else
+    tar xfz ../distrib/$TARNAME
+fi
+$DIRNAME/install_vnx $VERBOSE
 cd ..
 rm -rf tmp
